--- a/ml-service/requirements.txt
+++ b/ml-service/requirements.txt
@@ -1,5 +1,5 @@
-fastapi
-uvicorn
-scikit-learn
-joblib
-pandas
+fastapi==0.115.0
+uvicorn==0.30.0
+joblib==1.4.2
+scikit-learn==1.4.2
+pandas==2.2.2
